--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,13 +1,8 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: Python package
+name: Test it out
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [ try-* ]
 
 jobs:
   win:
@@ -23,3 +18,4 @@ jobs:
         python test.py
       env:
         NGROK_AUTH: ${{ secrets.NGROK_AUTH }}
+      timeout-minutes: 10
